src/modules/native-dark-mode/styles/quests.css
.mh-dark .mh-ui-assignment-meta,
.mh-dark #overlayPopup.zugzwangsLibraryQuestShopPopup .questLink .content b {
  color: var(--d-text);
}

.mh-dark #overlayPopup.zugzwangsLibraryQuestShopPopup .jsDialogContainer .suffix,
.mh-dark #overlayPopup.zugzwangsLibraryQuestShopPopup .smashQuest a,
.mh-dark .mh-ui-assignment-meta a {
  color: var(--d-link);
}

.mh-dark #overlayPopup.zugzwangsLibraryQuestShopPopup a.questLink {
  background-color: var(--d-alt);
  border-color: var(--d-border);
}

.mh-dark #overlayPopup.zugzwangsLibraryQuestShopPopup .jsDialogContainer .suffix,
.mh-dark #overlayPopup.zugzwangsLibraryQuestShopPopup .questLink .content {
  background-color: var(--d-alt);
}

.mh-dark #overlayPopup.zugzwangsLibraryQuestShopPopup .jsDialogContainer .content {
  padding: 10px;
}

.mh-dark #overlayPopup.zugzwangsLibraryQuestShopPopup #jsDialogAjaxPrefix {
  margin-bottom: 0;
  border-color: transparent;
}

